# Dora

./: .codecov.yml  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml
evaluation/: questions.json
evaluation/reports/: evaluation_report.txt
scripts/: test_llm.py
src/dora/: __init__.py  cli.py  document.py  evaluate.py  knowledge_base.py  llm.py  rag.py  vectorstore.py
tests/: __init__.py  test_cli.py  test_document.py  test_init.py  test_knowledge_base.py  test_llm.py  test_rag.py  test_vectorstore.py
