[project]
name = "dora"
version = "0.0.1"
description = "Knowledge-augmented local LLM using RAG"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mamoru Ota" }]
dependencies = [
  "langchain>=0.1.0",
  "langchain-community>=0.0.20",
  "langchain-ollama>=0.1.0",
  "sentence-transformers>=2.3.0",
  "chromadb>=0.4.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.2",
  "poethepoet>=0.29.0",
  "pydoclint>=0.5.9",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.8",
]

[project.scripts]
dora-test = "dora.cli:run_test_llm"
dora = "dora.cli:interactive"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dora"]

[tool.uv]
package = true

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
mypy_path = "src"
explicit_package_bases = true

[tool.pyright]
reportMissingImports = "none"
exclude = [".git", ".ruff_cache", ".venv"]
extraPaths = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY001", "INP001", "S101"]
fixable = ["ALL"]
unfixable = []
exclude = [".git", ".ruff_cache", ".venv", "scripts"]
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
preview = true

[tool.ruff.lint.isort]
known-first-party = ["dora"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.pydoclint]
style = 'numpy'
exclude = '\.git|\.ruff_cache|\.mypy_cache|\.venv'

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
norecursedirs = [".git", ".ruff_cache", ".venv", "scripts"]

[tool.poe.tasks]
lint-ruff = "ruff check --fix ."
lint-ruff-check = "ruff check ."
lint-mypy = "mypy ."
lint-mypy-check = "mypy ."
lint-pydoclint = "pydoclint ."
lint = ["lint-ruff", "lint-mypy",]
lint-ci = ["lint-ruff-check", "lint-mypy"]
test = "pytest -ra --cov=src --cov-report=term"
test-ci = "pytest -ra --cov=src --cov-report=term --cov-report=xml"

